# pacs

./: README.md  pyproject.toml
misc/: prepare-commit-msg
src/pacs/: common_vars.py  hardware.py  initialize.py  main.py  sync.py  utils.py
src/pacs/handler/: base.py  bootloader.py  default_apps.py  modules.py  theme.py
src/pacs/manager/: dotfile_manager.py  package_manager.py  service_manager.py  task_manager.py  validation_manager.py
