[project]
name = "pacs"
version = "0.1.0"
description = "Declarative Arch Linux Config in Python"
readme = "README.md"
authors = [
    { name = "PhosCity", email = "phoscity2@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.46",
    "rich>=14.3.3",
    "tomlkit>=0.14.0",
]

[project.scripts]
pacs = "pacs.main:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
